Done Hamdulelah with fixing the code. It is now the time to get rid of warnings and testing.

--- a/mobile/Base.lproj/Main.storyboard
+++ b/mobile/Base.lproj/Main.storyboard
@@ -2017,13 +2017,13 @@
         <simulatedScreenMetrics key="destination" type="retina4"/>
     </simulatedMetricsContainer>
     <inferredMetricsTieBreakers>
-        <segue reference="eOu-fK-l8m"/>
-        <segue reference="Apj-Nu-HMS"/>
-        <segue reference="QvK-NN-VIj"/>
-        <segue reference="hbd-4k-V2n"/>
+        <segue reference="5ry-4C-25B"/>
         <segue reference="J4P-Vd-9bA"/>
         <segue reference="wJr-mp-pWQ"/>
         <segue reference="Uka-AT-8DX"/>
+        <segue reference="QvK-NN-VIj"/>
         <segue reference="Pqp-qE-sVe"/>
+        <segue reference="Apj-Nu-HMS"/>
+        <segue reference="eOu-fK-l8m"/>
     </inferredMetricsTieBreakers>
 </document>
