--- a/mobile/Base.lproj/Main.storyboard
+++ b/mobile/Base.lproj/Main.storyboard
@@ -2019,7 +2019,7 @@
         <simulatedScreenMetrics key="destination" type="retina4"/>
     </simulatedMetricsContainer>
     <inferredMetricsTieBreakers>
-        <segue reference="5ry-4C-25B"/>
+        <segue reference="hbd-4k-V2n"/>
         <segue reference="J4P-Vd-9bA"/>
         <segue reference="wJr-mp-pWQ"/>
         <segue reference="Uka-AT-8DX"/>
